# computacion_grafica

./: CMakeLists.txt  OpenGL  README.md  main.cpp
Convolution/: CMakeCache.txt  CMakeLists.txt  ImgConv  Makefile  cmake_install.cmake  code_src  convolution.h  imagconv.cpp  imagconv.cpp.bck  kernel.csv  kernel2.csv  kernels.txt  sources
Raytracing/: Makefile  main.cpp
